[som] Track client-side navigations as pageviews in GA.
It doesn't appear to do this by default :/ So our GA page views are
only counting direct navigations so far.

Change-Id: I435b86d6c5c7904b9caf67ba97c8ad2085d228b5
Reviewed-on: https://chromium-review.googlesource.com/587009
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>

--- a/go/src/infra/appengine/sheriff-o-matic/frontend/index.html
+++ b/go/src/infra/appengine/sheriff-o-matic/frontend/index.html
@@ -59,5 +59,12 @@ crdx('setFeedbackButtonLink', 'https://goto.google.com/som-bug');
 
   ga('create', '{{.AnalyticsID}}', 'auto');
   ga('send', 'pageview');
+
+  // Track client-side navigations as individual page views.
+  window.addEventListener('location-changed', function() {
+    ga('set', 'page', window.location.pathname);
+    ga('send', 'pageview');
+  });
+
 {{end}}
 </script>
