Add googlers access.
Staging url:
https://11981-204d236-tainted-jojwang-dot-chopsdash.appspot.com/

Bug:770750

Change-Id: Idecd824c730b0ab40bb28742c8d7379bd9438d9c
Reviewed-on: https://chromium-review.googlesource.com/699433
Reviewed-by: Sean McCullough <seanmccullough@chromium.org>

--- a/go/src/infra/appengine/dashboard/frontend/elements/chopsdash-app.html
+++ b/go/src/infra/appengine/dashboard/frontend/elements/chopsdash-app.html
@@ -68,13 +68,13 @@
           that one table is for services covered by an SLA and one is not.-->
         <template is="dom-if" if="[[services.length]]">
           <div class="table">
-            <status-table services="[[services]]" latest-date-ts="{{latestDateTs}}">
-          </status-table>
+            <status-table services="[[services]]" latest-date-ts="{{latestDateTs}}" is-googler="[[isGoogler]]">
+            </status-table>
           </div>
         </template>
         <template is="dom-if" if="[[nonSLAServices.length]]">
           <div class="table">
-            <status-table services="[[nonSLAServices]]" latest-date-ts="{{latestDateTs}}">
+            <status-table services="[[nonSLAServices]]" latest-date-ts="{{latestDateTs}}" is-googler="[[isGoogler]]">
             </status-table>
           </div>
         </template>
@@ -116,6 +116,7 @@
         return {
           isGoogler: {
             type: Boolean,
+            value: false,
           },
           lastUpdated: {
             type: Object,
