--- a/go/src/infra/appengine/dashboard/frontend/test/index.html
+++ b/go/src/infra/appengine/dashboard/frontend/test/index.html
@@ -6,6 +6,7 @@
 <script>
   WCT.loadSuites([
     '/test/chopsdash-app_test.html',
+    '/test/current-incident-icon_test.html',
     '/test/incident-icon_test.html',
     '/test/service-row_test.html',
     '/test/status-table_test.html',
